# docs/swagger.yaml
@@ -101,39 +101,6 @@ info:
   title: Softeng Backend API
   version: "1.0"
 paths:
-  /chats/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get a chat by ID
-      parameters:
-      - description: Chat ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.Message'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Get a chat by ID
-      tags:
-      - chats
   /chats/create:
     post:
       consumes:
@@ -162,6 +129,39 @@ paths:
           schema:
             type: string
       summary: Create a new chat
+      tags:
+      - chats
+  /chats/get/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get a chat by ID
+      parameters:
+      - description: Chat ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Conversation'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Get a chat by ID
       tags:
       - chats
   /chats/message:
@@ -227,40 +227,6 @@ paths:
       summary: Handle a websocket connection
       tags:
       - chats
-  /users:
-    patch:
-      consumes:
-      - application/json
-      description: Update a user with the input payload
-      parameters:
-      - description: User
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/model.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/model.User'
-        "400":
-          description: Bad Request
-          schema:
-            type: string
-        "404":
-          description: Not Found
-          schema:
-            type: string
-        "500":
-          description: Internal Server Error
-          schema:
-            type: string
-      summary: Update a user
-      tags:
-      - users
   /users/create:
     post:
       consumes:
@@ -360,6 +326,40 @@ paths:
           schema:
             type: string
       summary: Get a user by ID
+      tags:
+      - users
+  /users/update:
+    patch:
+      consumes:
+      - application/json
+      description: Update a user with the input payload
+      parameters:
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "404":
+          description: Not Found
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Update a user
       tags:
       - users
 swagger: "2.0"
